# extract_images

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  file_ops.rs  lib.rs  main.rs  mod.rs  utils.rs
tests/: integration_tests.rs
