[package]
name = "extract_images"
version = "0.1.0"
authors = ["Tembo <tembocs101@gmail.com>"]
edition = "2021"
description = "Extract background images from Windows 10 assets directory and put them on the Desktop"
license = "MIT"
repository = "https://github.com/Tembocs/extract_images"
keywords = ["windows", "background", "images", "wallpaper"]
categories = ["filesystem", "command-line-utilities"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
dirs = "4.0.0"
term_size = "0.3.2"

[dev-dependencies]
tempfile = "3.0"